Corrige o link do google

--- a/fundamentos/bloco-3-intrucao-a-htmle-css/dia-1-html-css-estruturas-de-pagina/trybe.html
+++ b/fundamentos/bloco-3-intrucao-a-htmle-css/dia-1-html-css-estruturas-de-pagina/trybe.html
@@ -22,12 +22,15 @@
   <img src="trybe_logo.png" alt="Logo da trybe" width="400px">
   </p>
   <p id="b"><strong>Bernardo</strong> super comunicativo e com atencioso e com escuta ativa</p>
-  <p id="c"><strong>Carlos</strong> atualmente é professor de inglês, assim como Bernardo conheci na mesma dinâmica, super
+  <p id="c"><strong>Carlos</strong> atualmente é professor de inglês, assim como Bernardo conheci na mesma dinâmica,
+    super
     prestativo</p>
-  <p id="p"><strong>Phillipe</strong> começou a estuar programação a 7 meses, participou do mesmo grupo que os demais, atento e
+  <p id="p"><strong>Phillipe</strong> começou a estuar programação a 7 meses, participou do mesmo grupo que os demais,
+    atento e
     inteligente</p>
   <p id="a"><strong>Arlette</strong> também foi integrante do mesmo grupo, participativa e bem comunicativa</p>
-  <p> Para ter amizades assim procure por trybe no <a href="www.google.com" target="_blank">google</a></p>
+  <p> Para ter amizades assim procure por trybe no <a href="https://www.google.com.br/" target="_blank">google</a></p>
 </body>
+
 
 </html>
