--- a/fundamentos/bloco-3-intrucao-a-htmle-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-intrucao-a-htmle-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -8,16 +8,40 @@
         h1 {
             width: 65px;
             color: orange;
+            font-family: sans-serif;
+            text-align: center;
+        }
+        p { 
+            font-weight: 600;
+            font-size: 3em;
+            text-align: center;
+            text-decoration: underline
+        ;
         }
 
         body {
             background-color: rgb(255, 400, 200);
+            font-size: 16px;
+        }
+        ul { 
+            font-style: italic;
+            line-height: 30px;
+
         }
 #color-list {  
     background-color: aqua;
 }
 .favorite-color {
     background-color: darkgray;
+}
+#vermelho {
+    color: red;
+}
+#amarelo {
+    color: yellow;
+}
+#marrom {
+    color: maroon;
 }
     </style>
     </style>
@@ -27,9 +51,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="favorite-color">Qual é a sua cor favorita?</p>
     <ul class="favorite-color">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+        <li id="amarelo">Amarelo</li>
+        <li id="vermelho">Vermelho</li>
+        <li id="marrom">Marrom</li>
     </ul>
 </body>
 
