adição de style.css

--- a/fundamentos/bloco-3-intrucao-a-htmle-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-intrucao-a-htmle-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -33,15 +33,7 @@
 }
 .favorite-color {
     background-color: darkgray;
-}
-#vermelho {
-    color: red;
-}
-#amarelo {
-    color: yellow;
-}
-#marrom {
-    color: maroon;
+
 }
     </style>
     </style>
@@ -51,9 +43,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="favorite-color">Qual é a sua cor favorita?</p>
     <ul class="favorite-color">
-        <li id="amarelo">Amarelo</li>
-        <li id="vermelho">Vermelho</li>
-        <li id="marrom">Marrom</li>
+        <li style="color: yellow;">Amarelo</li>
+        <li style="color: red;">Vermelho</li>
+        <li style="color: brown;">Marrom</li>
     </ul>
 </body>
 
