--- a/fundamentos/bloco-5/dia-2-JavaScript-Trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5/dia-2-JavaScript-Trabalhando-com-elementos/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Exercício 5.2</title>
-    <style></style>        
+    <script src="style.css"></script>        
 </head>
 
 <body id="container">
