--- a/fundamentos/bloco-6/dia-1-HTML-CSS-Forms/form.html
+++ b/fundamentos/bloco-6/dia-1-HTML-CSS-Forms/form.html
@@ -49,7 +49,16 @@
                 <label for="date">Melhor data:</label>
                 <input type="date" name="date" id="date">
             </div>
+
+            <div class="line-content" id="news-checkbox">
+                <input type="checkbox" name="news" id="news"><label for="news">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
+
+            </div>
+            <div class="line-content" id="img-checkbox">
+                <input type="checkbox" name="img-term" id="img-term"><label for="img-term">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros</label>
+            </div>
         </div>
+        
         <div class="button-div">
             <button type="submit" id="submit-button">Enviar</button>
             <button type="reset" id="clear-button">Apagar</button>
