--- a/fundamentos/bloco-6/dia-2-Bibliotecas-JS-frameworks-CSS/form.html
+++ b/fundamentos/bloco-6/dia-2-Bibliotecas-JS-frameworks-CSS/form.html
@@ -6,65 +6,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form-TrybeTrip</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Trybe Trip</h1>
+    <header class="text-center">
+        <h1 class="display-2">Trybe Trip</h1>
+        <p class="lead">Preencha o formulário para participação:</p>
     </header>
-    <form action="" method="post" class="trip-form">
-        <div class="form-row">
-            <div class="line-content">
-                <label for="full-name">Nome</label>
-                <input type="text" name="full-name" id="full-name" placeholder="nome completo" minlength="10"
-                    maxlength="40">
-            </div>
-            <div class="line-content">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="digite seu email" minlength="10"
-                    maxlength="50">
-            </div>
-            <div class="line-content">
-                <fieldset id="favorite-destiny">
-                    <legend>Destino Favorito</legend>
-                    <input type="radio" name="destiny" id="favorite-destiny1" value="cidade"> <label
-                        for="favorite-destiny1">Cidade</label>
-                    <input type="radio" name="destiny" id="favorite-destiny2" value="campo"><label
-                        for="favorite-destiny2">Campo</label>
-                    <input type="radio" name="destiny" id="favorite-destiny3" value="praia"><label
-                        for="favorite-destiny3">Praia</label>
-                    <input type="radio" name="destiny" id="favorite-destiny4" value="montanha"><label
-                        for="favorite-destiny4">Montanha</label>
-                </fieldset>
+    <div  id="main-content" class="container">
+        <form action="" method="post" class="trip-form">
+            <div class="container">
+                <div class="container">
+                    <label for="full-name" class="form-label">Nome</label>
+                    <input type="text" name="full-name" id="full-name" placeholder="nome completo" minlength="10"
+                        maxlength="40" class="form-control">
+                </div>
+                <div class="container">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" name="email" id="email" placeholder="digite seu email" minlength="10"
+                        maxlength="50" class="form-control">
+                </div>
+                <div class="container">
+
+                    <p class="lead">Destino Favorito</p>
+
+                    <div class="checkout-text">
+                        <input type="radio" name="destiny" id="favorite-destiny1" value="cidade"> <label
+                            for="favorite-destiny1">Cidade</label>
+                    </div>
+                    <div class="checkout-text">
+                        <input type="radio" name="destiny" id="favorite-destiny2" value="campo"><label
+                            for="favorite-destiny2">Campo</label>
+                    </div>
+                    <div class="checkout-text">
+                        <input type="radio" name="destiny" id="favorite-destiny3" value="praia"><label
+                            for="favorite-destiny3">Praia</label>
+                    </div>
+                    <div class="checkout-text">
+                        <input type="radio" name="destiny" id="favorite-destiny4" value="montanha"><label
+                            for="favorite-destiny4">Montanha</label>
+                    </div>
+                </div>
+
+
+
+                <div class="container">
+                    <label for="answer-space" class="form-label">Por que você deveria ser a pessoa desenvolvedora a
+                        ganhar o concurso
+                        TrybeTrip?</label>
+                    <textarea name="answer-space" id="answer-space" maxlength="500" class="form-control"
+                        placeholder="máximo 500 caracteres"></textarea>
+                </div>
+
+                <div class="container">
+                    <label for="date" class="form-label">Melhor data:</label>
+                    <input type="date" name="date" id="date" class="form-control">
+                </div>
+
+                <div class="container" id="news-checkbox">
+                    <input type="checkbox" name="news" id="news" class="form-check-input"><label for="news"
+                        class="form-label">Gostaria de receber outras incríveis
+                        oportunidades oferecidas pela Trybe?</label>
+
+                </div>
+                <div class="container" id="img-checkbox">
+
+                    <input type="checkbox" name="img-term" id="img-term" class="form-check-input"><label for="img-term"
+                        class="form-label">Concordo que imagens das
+                        minhas férias poderão ser usadas na divulgação de concursos futuros</label>
+                </div>
+
+
+                <div class="container">
+                    <button type="reset" id="clear-button" class="btn btn-secondary">Apagar</button>
+                    <button type="submit" id="submit-button" class="btn btn-primary">Enviar</button>
+                </div>
+
 
             </div>
-            <div class="line-content">
-                <label for="answer-space">Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso
-                    TrybeTrip?</label>
-                </label>
-                <textarea name="answer-space" id="answer-space" maxlength="500"></textarea>
-            </div>
-            <div class="line-content">
-                <label for="date">Melhor data:</label>
-                <input type="date" name="date" id="date">
-            </div>
-
-            <div class="line-content" id="news-checkbox">
-                <input type="checkbox" name="news" id="news"><label for="news">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
-
-            </div>
-            <div class="line-content" id="img-checkbox">
-                <input type="checkbox" name="img-term" id="img-term"><label for="img-term">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros</label>
-            </div>
-        </div>
-        
-        <div class="button-div">
-            <button type="submit" id="submit-button">Enviar</button>
-            <button type="reset" id="clear-button">Apagar</button>
-            
-        </div>
-    </form>
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
 
